--- a/ASP.NET MVC/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/ASP.NET MVC/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -60,9 +60,20 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj">
+      <Project>{C24EF31F-058F-4F7F-A156-408FC7ED911E}</Project>
+      <Name>SportsStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SportsStore.WebUI\SportsStore.WebUI.csproj">
+      <Project>{8E69FA82-0D00-45B1-8C2E-CAC0502E83F1}</Project>
+      <Name>SportsStore.WebUI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
