--- a/ASP.NET MVC/SportsStore/SportsStore.WebUI/Views/Web.config
+++ b/ASP.NET MVC/SportsStore/SportsStore.WebUI/Views/Web.config
@@ -8,6 +8,10 @@
     </sectionGroup>
   </configSections>
 
+  <connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=SportsStore;Integrated Security=true" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
@@ -17,6 +21,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="SportsStore.WebUI.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
